utf8proc (2.7.0-1) UNRELEASED; urgency=medium

  [ Debian Janitor ]
  * debian/copyright: use spaces rather than tabs to start continuation lines.
  * Set upstream metadata fields: Bug-Submit.

  [ Graham Inggs ]
  * New upstream release

 -- Debian Janitor <janitor@jelmer.uk>  Fri, 18 Sep 2020 05:52:35 -0000

utf8proc (2.5.0-1) unstable; urgency=medium

  * New upstream release
  * Refresh use-unicode-data.patch
  * Build with unicode-data 13.0 (Closes: #954131)
  * Set Rules-Requires-Root: no
  * Add Build-Depends-Package to libutf8proc2.symbols
  * Bump Standards-Version to 4.5.0, no changes

 -- Graham Inggs <ginggs@debian.org>  Mon, 30 Mar 2020 08:12:49 +0000

utf8proc (2.4.0-2) unstable; urgency=medium

  [ Debian Janitor ]
  * Bump debhelper from old 11 to 12.
  * Set upstream metadata fields:
    Bug-Database, Repository, Repository-Browse.
  * Update standards version to 4.4.1, no changes needed.

  [ Mo Zhou ]
  * Update my mail address in control and copyright.
  * Initialize autopkgtest: compile and run upstream tests.

 -- Mo Zhou <lumin@debian.org>  Tue, 07 Jan 2020 14:56:30 +0800

utf8proc (2.4.0-1) unstable; urgency=medium

  * New upstream version 2.4.0
  * Bump Standards-Version to 4.4.0 (no change).
  * Delete d/compat in favor of debhelper-compat (= 11).
  * Update patches:
    * Rebase use-unicode-data.patch
    - Remove unicode-data-12.1.0pre1.patch
    - Remove utf8proc-unicode-version.patch

 -- Mo Zhou <cdluminate@gmail.com>  Wed, 21 Aug 2019 14:41:53 +0000

utf8proc (2.3.0-1) unstable; urgency=medium

  * New upstream version 2.3.0 (Closes: #927941)
  * Bump unicode-data requirement to (>= 12.1) && (<< 12.2).
  * Refresh use-unicode-data.patch; Remove pass-hardening-flags.patch (merged).
  * Patch: update utf8proc_data.c against unicode-data 12.1.0~pre1.
  * Patch: update unicode-data version strings to 12.1.0
  * Patch: upstream didn't bump minor version in build system and header.