@@ -6,6 +6,7 @@ utf8proc (2.7.0-1) UNRELEASED; urgency=medium
 
   [ Graham Inggs ]
   * New upstream release
+  * Refresh use-unicode-data.patch
 
  -- Debian Janitor <janitor@jelmer.uk>  Fri, 18 Sep 2020 05:52:35 -0000
 
